--- a/doc/cap-iacs-base.config
+++ b/doc/cap-iacs-base.config
@@ -1,4 +1,4 @@
-abstract=This is the base type module of the Common Agriculture Policy - Integrated Administration and Control System (CAP-IACS) ontology ontology. The CAP-IACS ontology was developed part of the Open-IACS project, which aims to provide an open platform for the exchange of solutions in the field of Integrated Agricultural Control System (IACS) through the paradigm of connected open data. The ontology has been derived from the derived from the JRC IACS application schema, and it has been created in line with best practices and methodologies, reusing existing standard models and ontologies, including skos for the representation of codelists.
+abstract=This is the base module of the Common Agriculture Policy - Integrated Administration and Control System (CAP-IACS) ontology ontology. The CAP-IACS ontology was developed part of the Open-IACS project, which aims to provide an open platform for the exchange of solutions in the field of Integrated Agricultural Control System (IACS) through the paradigm of connected open data. The ontology has been derived from the derived from the JRC IACS application schema, and it has been created in line with best practices and methodologies, reusing existing standard models and ontologies, including skos for the representation of codelists.
 description=Ontology of the base types used in IACS, generated from the transformation of the corresponding JRC application schema
 ontologyTitle=JRC IACS - Base Types Ontology
 ontologyName=JRC IACS - Base Types Ontology
@@ -17,5 +17,5 @@ contributors=
 contributorsURI=
 contributorsInstitution=
 contributorsInstitutionURI=
-importedOntologyNames=http://www.opengis.net/ont/geosparql#;http://lpis.ec.europa.eu/registry/applicationschema/cap-iacs-base#;
-importedOntologyURIs=http://www.opengis.net/ont/geosparql#;http://lpis.ec.europa.eu/registry/applicationschema/cap-iacs-base#;
+importedOntologyNames=http://www.opengis.net/ont/geosparql#;
+importedOntologyURIs=http://www.opengis.net/ont/geosparql#;
