--- a/doc/cap-iacs-parcel-ext.config
+++ b/doc/cap-iacs-parcel-ext.config
@@ -1,21 +1,20 @@
-abstract=This is the Extension of the Parcels module of the Common Agriculture Policy - Integrated Administration and Control System (CAP-IACS) ontology ontology. The CAP-IACS ontology was developed part of the Open-IACS project, which aims to provide an open platform for the exchange of solutions in the field of Integrated Agricultural Control System (IACS) through the paradigm of connected open data. The ontology has been derived from the derived from the JRC IACS application schema, and it has been created in line with best practices and methodologies, reusing existing standard models and ontologies, including skos for the representation of codelists.
-description=Ontology of the system for the identification and registration of payment entitlements used in IACS, generated from the transformation of the corresponding JRC application schema
+abstract=This ontology is one of the modules comprising CAP-IACS (Common Agriculture Policy - Integrated Administration and Control System) ontology. The CAP-IACS ontology was developed part of the Open-IACS project, which aims to provide an open platform for the exchange of solutions in the field of Integrated Agricultural Control System (IACS) through the paradigm of connected open data. The ontology has been derived from the derived from the JRC IACS application schema.
 ontologyTitle=JRC IACS Extension - Extension of the identification System for Agricultural Parcels Ontology
-ontologyName=JRC IACS Extension - Extension of the identification System for Agricultural Parcels Ontology
+ontologyName=CAP-IACS Ontology: Main module
 thisVersionURI=http://lpis.ec.europa.eu/registry/applicationschema/cap-parcel-ext/1.0
 ontologyRevisionNumber=1.0
 ontologyNamespaceURI=http://lpis.ec.europa.eu/registry/applicationschema/cap-parcel-ext
 status=CAP-IACS Ontology Specification Draft
-licenseURI=http://creativecommons.org/licenses/by/4.0
+licenseURI=https://creativecommons.org/licenses/by/4.0/
 licenseName=CC-BY-4.0
 licenseIconURL=https://en.wikipedia.org/wiki/Creative_Commons_license#/media/File:CC_BY_icon.svg
 authors=Raul Palma;Bogusz Janiak;
 authorsURI=http://orcid.org/0000-0003-4289-4922;;
 authorsInstitution=PSNC;PSNC;
-authorsInstitutionURI=
+authorsInstitutionURI=;;
 contributors=
 contributorsURI=
 contributorsInstitution=
 contributorsInstitutionURI=
-importedOntologyNames=http://lpis.ec.europa.eu/registry/applicationschema/cap-iacs-parcel#;
-importedOntologyURIs=http://lpis.ec.europa.eu/registry/applicationschema/cap-iacs-parcel#;
+importedOntologyNames=https://raw.githubusercontent.com/rapw3k/cap-iacs/main/cap-iacs-parcel.ttl;
+importedOntologyURIs=https://raw.githubusercontent.com/rapw3k/cap-iacs/main/cap-iacs-parcel.ttl;
