--- a/doc/cap-iacs-base.config
+++ b/doc/cap-iacs-base.config
@@ -1,21 +1,20 @@
-abstract=This is the base module of the Common Agriculture Policy - Integrated Administration and Control System (CAP-IACS) ontology ontology. The CAP-IACS ontology was developed part of the Open-IACS project, which aims to provide an open platform for the exchange of solutions in the field of Integrated Agricultural Control System (IACS) through the paradigm of connected open data. The ontology has been derived from the derived from the JRC IACS application schema, and it has been created in line with best practices and methodologies, reusing existing standard models and ontologies, including skos for the representation of codelists.
-description=Ontology of the base types used in IACS, generated from the transformation of the corresponding JRC application schema
+abstract=This ontology is one of the modules comprising CAP-IACS (Common Agriculture Policy - Integrated Administration and Control System) ontology. The CAP-IACS ontology was developed part of the Open-IACS project, which aims to provide an open platform for the exchange of solutions in the field of Integrated Agricultural Control System (IACS) through the paradigm of connected open data. The ontology has been derived from the derived from the JRC IACS application schema.
 ontologyTitle=JRC IACS - Base Types Ontology
-ontologyName=JRC IACS - Base Types Ontology
+ontologyName=CAP-IACS Ontology: Main module
 thisVersionURI=http://lpis.ec.europa.eu/registry/applicationschema/cap-iacs-base/3.0
 ontologyRevisionNumber=3.0
 ontologyNamespaceURI=http://lpis.ec.europa.eu/registry/applicationschema/cap-iacs-base
 status=CAP-IACS Ontology Specification Draft
-licenseURI=http://creativecommons.org/licenses/by/4.0
+licenseURI=https://creativecommons.org/licenses/by/4.0/
 licenseName=CC-BY-4.0
 licenseIconURL=https://en.wikipedia.org/wiki/Creative_Commons_license#/media/File:CC_BY_icon.svg
 authors=Raul Palma;
 authorsURI=http://orcid.org/0000-0003-4289-4922;
 authorsInstitution=PSNC;
-authorsInstitutionURI=
+authorsInstitutionURI=;
 contributors=
 contributorsURI=
 contributorsInstitution=
 contributorsInstitutionURI=
-importedOntologyNames=http://www.opengis.net/ont/geosparql#;
-importedOntologyURIs=http://www.opengis.net/ont/geosparql#;
+importedOntologyNames=http://www.opengis.net/ont/geosparql;
+importedOntologyURIs=http://www.opengis.net/ont/geosparql;
