--- a/docs/cap-iacs-parcel_codes.config
+++ b/docs/cap-iacs-parcel_codes.config
@@ -7,7 +7,7 @@ ontologyNamespaceURI=http://lpis.ec.europa.eu/registry/applicationschema/cap-iac
 status=CAP-IACS Ontology Specification Draft
 licenseURI=https://creativecommons.org/licenses/by/4.0/
 licenseName=CC-BY-4.0
-licenseIconURL=https://en.wikipedia.org/wiki/Creative_Commons_license#/media/File:CC_BY_icon.svg
+licenseIconURL=https://en.wikipedia.org/wiki/Creative_Commons_license#/media/File:CC_BY_icon.svg.png
 authors=Raul Palma;
 authorsURI=http://orcid.org/0000-0003-4289-4922;
 authorsInstitution=PSNC;
